Add README and code link in the footer.

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
       <div id="credits">
         <span class="contact"><a href="mailto:contact@wtfcnn.com">contact us</a></span>
         <span><a href="http://www.zazzle.com/breadpig">support us</a></span>
+        <span><a href="http://github.com/chromakode/wtfcnn">source code</a></span>
         <span class="breadpig"><img src="images/breadpig.png"/> a <a href="http://breadpig.com">breadpig</a> project</span>
         <span class="chromakode"><img src="images/chromakode.png"/> code by <a href="http://chromakode.com">chromakode</a></span>
       </div>
